@@ -12,7 +12,8 @@ fi
 cd $APPDIR
 java -jar -Dspring.config=$APPDIR/../properties/default_db.xml \
     -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
-    -jar lib/$APPNAME.jar "$@" run.sh 2>&1
+    -jar lib/$APPNAME.jar "$@" 2>&1 > run.log
 
 mailx -s "[$SERVER] EnsemblDataPipeline OK!" $EMAILLIST < $APPDIR/logs/summary.log
+
 
