@@ -1,0 +1,5 @@
+#!/usr/bin/env bash
+
+APPDIR=/home/rgddata/pipelines/EnsemblDataPipeline
+
+$APPDIR/run.sh -species ALL
