@@ -1,5 +1,6 @@
 2020-04-16
   added logging of xdb ids
+  added script run_ensembl.sh that was used on PROD but never had been committed to git
 
 2020-03-16
   tuned up logging
